Completed Astari Supplies

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -86,6 +86,9 @@
                       <li>
                         <a href="#riddles">Riddles</a>
                     </li>
+                    <li>
+                      <a href="#astariSupplies">Astari Supplies</a>
+                  </li>
                   </ul>
                 </li>
                 <li>
@@ -166,6 +169,7 @@
                          <ul class="menu-submenu accordion-content">
                           <li><a class="head" href="#aMessageForZarowyn">A Message for Zarowyn</a></li>
                           <li><a class="head" href="#riddles">Riddles</a></li>
+                          <li><a class="head" href="#astariSupplies">Astari Supplies</a></li>
                          </ul>
                          <!-- menu-submenu accordon-content-->
                          <li id="nav7" class="toggle accordion-toggle"> 
@@ -1051,7 +1055,7 @@
                       <img class="npc-img" src="Images/Darkwoods/Noisy_Neighbors_Lizard_Totem.png" alt="Lizard Totem"> 
                       Go back to the east then just south across the bridge to the Lizardmans camp. There are lots of Lizard Totems but you have to find the 5 that still need defaceing. The map attached has the coordinates of all 5 totems. When you find one you will be updated <span class="green">QUEST UPDATE: You have defaced one of the five Lizardman Totems for Old Gerald.</span> When you find the final one you will be updated.
                       <br>
-                      <span class="green">QUEST RECEIVED:</span><span class="red"> Noisy Neighbors</span><span class="orange">, Return to Old Gerald about the totems.</span>
+                      <span class="green">QUEST UPDATE:</span><span class="red"> Noisy Neighbors</span><span class="orange">, Return to Old Gerald about the totems.</span>
                       <br>
                       Thank you for defaceing those totems! Maybe they will see it as a sign to leave. Then I can finally fish in peace. Take this item as a token of my appreciation!
                     </p>  
@@ -1072,7 +1076,113 @@
               </div>
               <!-- End of Noisy Neighbors -->
               <div class="line"></div>
-
+              <!-- Start of Astari Supplies  -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="astariSupplies" class="anchor text-center">Astari Supplies</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Adept</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Lord Solfein
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/Darkwoods/Astari_Supplies_Sash_of_the_Astari_Guard.png" alt="Worn Guard Halfplate" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/Astari_Supplies_Sash_of_the_Astari_Guard_Stats.png' alt='Sash of the Astari Guard Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/Astari_Supplies_Gold_500.png' alt='Gold 500'>">
+                          </td>                        
+                    </table>
+                    <hr>
+                    <p>
+                      You must be an <span class="light-red">Astari</span> to do this quest.
+                      If you are not an Astari the guard will tell you that area is only open to official Astari Guard Personnel.
+                      <hr>
+                    </p>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/Darkwoods/Astari_Supplies_Location.png" alt="Astari Shelter Location"> 
+                        The Astari Shelter is located northeast of Autumn. You can follow the road north then east past the last river to the last rock formation to the north. You can also take the land bridge go all the way to the coast then north past the first two rock formations to the thrid one.
+                        When you try to enter the steel door in the next room the guard will say; <span class="red">That area is only open to official Astari Guard Personnel</span><span class="orange"> If you want to get in, you'll have to join The Guard.</span>  
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Astari Supplies</span><span class="orange">, Talk to Lord Solfein in Autumn to join the Guard.</span>
+                    <p class="clearfix">
+                          <img class="npc-img" src="Images/Darkwoods/Astari_Supplies_Lord_Solfein.png" alt="Lord Solfein"> 
+                        Return to Autumn to speak to <span class="light-red">Lord Solfein</span>, Greetings. Have you come to inquire about the guard position at the underground shelter?<span class="light-green"> Yes, I'd like to join the Astari Guard</span><span class="orange"> Lord Solfein looks you over.</span>
+                        Thank you for volunteering. Here are your commission papers. Return to the shelter, and report to Captain Laulban for your orders. And be careful - you're the fourth new recruit they've asked for this week.   
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Astari Supplies</span><span class="orange">, Report to Captain Laulban in the Astari Shelter</span>                       
+                      </p>
+                    <p class="clearfix">
+                      <img class="npc-img" src="Images/Darkwoods/Astari_Supplies_Captain_Laulban.png" alt="Captain Laulban">
+                      Return to the shelter and speak to <span class="light-red">Captain Laulban</span>, So, you're the new recruit, eh? Very well.<span class="light-green"> What are my duties?</span> Your duties here are simple. The supplies and records in these chambers have been stored for the Astari people in case of an emergency, such as a second Rune War.
+                      Our job is to protect them. We've been facing an infestation of poisonous green triddles lately. They come up through a trap door, way in the back of the shelter. Not the one just west of here - that goes down to the sewers. We're not sure where the one in the back leads. The vermin can't get in if the trap door stays closed, but some of these recruits are.. shall we say... forgetful.
+                      So every once in a while the triddles get in and go after the supp,ies. And evey once in a while one of the recruits doesn't come back. We have to keep the trap door closed, and that is your first assignment. Follow this corridor to its end. The trap door is in the last room. Exterminate any insects that have come through. Be sure to check the lock on the trap door, and clse it if it's open. Then report back to me.
+                      <br>
+                      <span class="green">QUEST UPDATE:</span><span class="red"> Astari Supplies</span><span class="orange">, Check the trap door in the supply room</span>
+                      <br>
+                      Go out and around to the south of the Captains office all the way to the west to the last door. There should be a few insects running around in the hallway.<span class="red"> Spiders, or Green Triddles.</span> Kill them then enter the room and close the trap door in the floor. You will be updated again.
+                      <br>
+                      <span class="green">QUEST UPDATE:</span><span class="red"> Astari Supplies</span><span class="orange">, Report to Captain Laulban in the Astari Shelter.</span>
+                      <br>
+                      I'm glad to see you back in on piece, recruit. What do you have to report? <span class="light-green">I found the trapdoor. It was open, so I closed it.</span> Good work. I'm glad to see that you can handle yourself, soldier. I have another assignment for you; Lord Malgoth over in Dunmarrow has asked us to send him certain documents from our files. Apparently, this shelter held the last remaining copy. I sent your predecessor to get them 
+                      , but like so many others, he never returned. The documents are filed away in a foot chest, in the room just before the one where the triddles are getting in. Go find these papers and bring them to me. But be careful - there may still be some insects about. <span class="light-green">Dunmarrow? Where's that?</span> Dunmarrow is an ancient Astari city, beyond the river to the east. They say it survived the ravages of the Rune War because 
+                      of a blessing from the goddess Ulthien. I'm afraid I don't know the full story. Anyway, Lord Malgoth's request is legitimate if that's what you're concerned about. Now go.
+                      <br>
+                      <span class="green">QUEST UPDATE:</span><span class="red"> Astari Supplies</span><span class="orange">, Retrieve the documents from the footchest in the Astari Shelter.</span>
+                      <br>
+                      Just like before head around to the south of the Captains office, go west to the second door and search the footchest <img src="Images/Darkwoods/Astari_Supplies_Footchest.png" alt="Footchest"> in this room. When you search the document you will be updated. <span class="orange">*You search the footlocker but find no documents*</span> 
+                      <br>
+                      <span class="green">QUEST UPDATE:</span><span class="red"> Astari Supplies</span><span class="orange">, Report back to Captain Laulban.</span>
+                      <br>
+                      By the scars of Arna! Missing you say? I know what must have happened. As I told you, the recruits we've lost have been disappearing completely. The insects must be dragging them down, through that accursed trap door, to their lair. If I'm to send Lord Malgoth his papers I need a brave and resourceful soldier to go down there and find them. You are the best I've got. Prepare carefully, and feel free to recruit others to help - we don't know what's down there. Find those documents and bring them back to me. Good luck, soldier!
+                      <br>
+                      <span class="green">QUEST UPDATE:</span><span class="red"> Astari Supplies</span><span class="orange">, Find the lost documents in the insect lair below the shelter.</span>
+                    </p>
+                    <p class="clearfix">
+                      <img class="npc-img" src="Images/Darkwoods/Astari_Supplies_Lair_Map.png" alt="Lair Map">
+                      The lair is not a very big location, but you can go the wrong way a few times. If you get lost the map has the location were to go. You will encoutner <span class="red">Spiders, Brown Triddles, Green Triddles, Fireflies, and Termigon Warriors.</span> When you reach the last area you will see a decaying corps. <img src="Images/Darkwoods/Astari_Supplies_Decaying_Corps.png" alt="Decaying Corps"> Click on it to receive the missing documents.
+                      <br>
+                      <span class="green">QUEST UPDATE:</span><span class="red"> Astari Supplies</span><span class="orange">, Papers found. Return to Captain Laulban!</span>
+                      <br>
+                      Return to Captain Laulban. Excellent work! I'll have a runner carry these to Lord Malgoth in Dunmarrow immediately. I'm astounded by your account of the tunnel complex that lies beneath us. I'll be writing to Lord Solfein, explaining our need for even more new recruits. You, on the other hand, are too important to be wasted on guard duty. Any recruit off the street can guard these supplies. Very few can brave the perils you have faced. Effective immediately, I'm promoting you to Lieutenant and mustering you out of the Astari Guard.
+                       With your promotion, you've earned The Sash of the Astari Guard. Wear it proudly! Here is your pay. Thanks again Lieutenant, and good luck!
+                    </p>    
+                      
+                        
+                          <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">GOLD RECEIVED: 500</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Sash of the Astari Guard</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">2,200</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>                         
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                    Gerald can now fish in peace! He gifted you with a Worn Guard Halfplate.                       
+                  </div>
+                </div>
+              </div>
+              <!-- End of Astari Supplies -->
+              <div class="line"></div>
 
 
 
