New Images Added

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -89,6 +89,9 @@
                     <li>
                       <a href="#astariSupplies">Astari Supplies</a>
                   </li>
+                  <li>
+                    <a href="#noisyNeighbors">Noisy Neighbors</a>
+                </li>
                   </ul>
                 </li>
                 <li>
@@ -170,6 +173,7 @@
                           <li><a class="head" href="#aMessageForZarowyn">A Message for Zarowyn</a></li>
                           <li><a class="head" href="#riddles">Riddles</a></li>
                           <li><a class="head" href="#astariSupplies">Astari Supplies</a></li>
+                          <li><a class="head" href="#noisyNeighbors">Noisy Neighbors</a></li>
                          </ul>
                          <!-- menu-submenu accordon-content-->
                          <li id="nav7" class="toggle accordion-toggle"> 
