Completed Sentimental Value

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -75,6 +75,9 @@
                     <li>
                       <a href="#termigonArmor">Termigon Armor</a>
                   </li>
+                  <li>
+                    <a href="#sentimentalValue">Sentimental Value</a>
+                </li>
                   </ul>
                 </li>
                 <li>
@@ -162,6 +165,7 @@
                           <!-- accordion-toggle -->
                           <ul class="menu-submenu accordion-content">
                              <li><a class="head" href="#termigonArmor">Termigon Armor</a></li>
+                             <li><a class="head" href="#sentimentalValue">Sentimental Value</a></li>
                           </ul>
                          <!-- menu-submenu accordon-content-->
                          <li id="nav6" class="toggle accordion-toggle"> 
@@ -1187,6 +1191,89 @@
               </div>
               <!-- End of Astari Supplies -->
               <div class="line"></div>
+              <!-- Start of Sentimental Value  -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="sentimentalValue" class="anchor text-center">Sentimental Value</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Adept</td>
+                          <td>Searching</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Galun
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/Darkwoods/Sentimental_Value_Razor_Bone_Dagger.png" alt="Lime" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/Sentimental_Value_Razor_Bone_Dagger_Stats.png' alt='Razor Bone Dagger Stats'>">
+                          </td>                        
+                    </table>
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/Darkwoods/Sentimental_Value_Galun.png" alt="Galun"> 
+                        Speak to <span class="light-red">Galun</span>, Hail and well met. <span class="light-green">Hail, good sir.</span> You look like a 'sturdy' adventurer. Perhaps you could do me a small faovor? <span class="light-green">Favor?</span> My great-uncle, the honorable Lord Beldan, hasn't been seen for several years. When I last saw him, he was in possession of soemthing of great 
+                        sentimental value to me. When he disappeared, he was excavating an old temple near this lodge. I understand the temple is located in the fork of a great river. You should speak with Ursos about it. I believe he has seen it in his travels. Are you interested in helping me? <span class="light-green">I'm always up for a challenge</span> Good, good. Glad to hear that you are brave. 
+                        I have to war you, the temple is rumored to be full of foul beasts. Some of them... <span class="orange">*He laughs nervously*</span> ... Of supernatural nature. But of course, who believes rumors these days? The item you are looking for is a great sword with a jewel-encrusted hilt. Return it to me and I will reward you well. Farewell and good luck.
+                        <br>
+                    </p>    <span class="green">QUEST RECEIVED:</span><span class="red"> Sentimental Value</span><span class="orange">, Locate 2 pieces of Galun's Uncle's lost great sword in the Temple of Malax near Autumn..</span>
+                    <p class="clearfix">
+                      <img class="npc-img" src="Images/Darkwoods/Sentimental_Value_Temple_of_Malax_Location.png" alt="Temple of Malax Location"> 
+                      <img class="npc-img" src="Images/Darkwoods/Sentimental_Value_Gem_Encrusted_Hilt_Location.png" height=250 width=150 alt="Gem Encrusted Hilt Location">
+                      <img class="npc-img" src="Images/Darkwoods/Sentimental_Value_Sharp_Blade_Location.png" height=250 width=150 alt="Sharp Blade Location">
+                      This temple is not to hard to navigate. I have marked the location of the Sea chest where the Gem Encrusted Hilt is located. There are plenty of enemies to fight though <span class="red">Cultist(9), Fighter(19), Skeletal Apprentice(8), Zombie(13), Small Skeleton(5), Shadow(17), Skeletal Warriors(17) Ghost(23)</span>. Once you reach the Large Sea Chest <img src="Images/Darkwoods/Sentimental_Value_Large_Sea_Chest.png" alt="Large Sea Chest"> open it to spawn <span class="red">Soul of Beldan(10). </span>
+                      <img class="monster-img" src="Images/NPC/Monsters/Soul_of_Beldan.png" alt="Soul of Beldan"> Kill him and you will be updated. <span class="green">QUEST UPDATE: You have found the gem-encrusted hilt of a broken sword</span> The sharp blade of the sword is located on the 3 level down. When you find the next Large Sea Chest. <img src="Images/Darkwoods/Sentimental_Value_Large_Sea_Chest.png" alt="Large Sea Chest"> Open it to spawn <span class="red">Body of Beldan(10)</span> <img class="monster-img" src="Images/NPC/Monsters/Body_of_Beldan.png" alt="Body of Beldan">
+                       Kill him and you will be updated. <span class="green">QUEST UPDATE: You have found a very sharp blade from a broken sword.</span> 
+                       <br>
+                       <span class="green">QUEST RECEIVED:</span><span class="red"> Sentimental Value</span><span class="orange">, Return the pieces of the sword to Galun at the Autumn Hunting Lodge .</span>
+                       <br>                       
+                       Travel back to the Hunting Lodge and speak to Galun. Ah... You found it! A pity the sword is shattered. I will take the hilt, as it contains gems of great... ...'sentimental' value to me. As for the blade take it to my personal blacksmith, Sathis in Silvest. He will craft you an item that will be a worthy reward.                       
+                       <br>
+                       <span class="green">QUEST RECEIVED:</span><span class="red"> Sentimental Value</span><span class="orange">, Seek the Blacksmith Sathis in Silvest.</span>
+                       <ul>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">5,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      </ul>
+                      
+                      <hr> 
+                    </p>
+                    <p class="clearfix"> 
+                      <img class="npc-img" src="Images/Darkwoods/Sentimental_Value_Sathis.png" alt="Sathis"> 
+                      Travel to Silvest and speak to <span class="light-red">Sathis</span>, Good day! I do hope you're fealing better than I. Old bones do not move as swiftly or as surely as those of the young. I still have my craft, though! Fine blades I can craft yet.
+                      <span class="light-green">I would speak to you about this blade.</span> Ah- Beldan's blade. You found it then. Excellent. <span class="orange">*He turns the blade over in his hands mumbling to himself*</span> Yes, yes, still good material. I can do something with this. 
+                      Lord Galun gave you this, i assume, and kept the hilt? <span class="light-green">He did indeed. He said you could craft something for me as a reward.</span> Excellent. Hold here a bit. I'll be back in two shakes of a dog's tail. <span class="orange">*He winks at you and shoffles off* *He returns in a fairly short time and carefully hands you a beautiful dagger*</span>
+                      and here ye be. Thank you for assisting my lord in his quest. May you use the blade in continuing good health, my friend.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Razor Bone Dagger</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">8,250</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>                         
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                    You received a Razor Bone Dagger from Sathis for assisting Lord Galun                       
+                  </div>
+                </div>
+              </div>
+              <!-- End of Sentimental Value -->
+              <div class="line"></div>
+
 
 
 
