--- a/darkWoods.html
+++ b/darkWoods.html
@@ -98,7 +98,7 @@
                   </ul>
                 </li>
                 <li>
-                  <a href="#combatSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Combat Trainers</a>
+                  <a href="#combatSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Archery Trainers</a>
                   <ul class="collapse list-unstyled" id="combatSubmenu">
                       <li>
                           <a href="#"></a>
