Completed Steady Hand

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -101,25 +101,25 @@
                   <a href="#combatSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Archery Trainers</a>
                   <ul class="collapse list-unstyled" id="combatSubmenu">
                       <li>
-                          <a href="#"></a>
+                          <a href="#advancedRangerTraining">Advanced Ranger Training</a>
                       </li>
                       <li>
-                          <a href="#"></a>
+                          <a href="#steadyHand">Steady Hand</a>
                       </li>
                       <li>
-                          <a href="#"></a>
+                          <a href="#stickJab">Stick Jab</a>
                       </li>
                       <li>
-                          <a href="#"></a>
+                          <a href="#slowAndSteady">Slow and Steady</a>
                       </li>
                       <li>
-                          <a href="#"></a>
+                          <a href="#waitForIt">Wait for It</a>
                       </li>
                       <li>
-                          <a href="#"></a>
+                          <a href="#loadingTheSling">Loading the Sling</a>
                       </li>
                       <li>
-                          <a href="#"></a>
+                          <a href="#snappy">Snappy</a>
                       </li>
                   </ul>
                 </li>
@@ -182,17 +182,17 @@
                          <!-- menu-submenu accordon-content-->
                          <li id="nav7" class="toggle accordion-toggle"> 
                           <span class="icon-plus"></span>
-                          <a class="menu-link" href="#">Combat Trainers</a>
+                          <a class="menu-link" href="#">Archery Trainers</a>
                          </li>
                          <!-- accordion-toggle -->
                          <ul class="menu-submenu accordion-content">
-                          <li><a class="head" href="#"></a></li>
-                          <li><a class="head" href="#"></a></li>
-                          <li><a class="head" href="#"></a></li>
-                          <li><a class="head" href="#"></a></li>
-                          <li><a class="head" href="#"></a></li>
-                          <li><a class="head" href="#"></a></li>
-                          <li><a class="head" href="#"></a></li>
+                          <li><a class="head" href="#advancedRangerTraining"></a></li>
+                          <li><a class="head" href="#steadyHand"></a></li>
+                          <li><a class="head" href="#stickJab"></a></li>
+                          <li><a class="head" href="#slowAndSteady"></a></li>
+                          <li><a class="head" href="#waitForIt"></a></li>
+                          <li><a class="head" href="#loadingTheSling"></a></li>
+                          <li><a class="head" href="#snappy"></a></li>
                          </ul>
                        </ul>
                        <!-- menu-list accordion-->
@@ -1207,7 +1207,7 @@
                         </tr>
                         <tr>
                           <td>Adept</td>
-                          <td>Searching</td>                        
+                          <td>Combat</td>                        
                     </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
@@ -1272,6 +1272,143 @@
                 </div>
               </div>
               <!-- End of Sentimental Value -->
+              <div class="line"></div>
+               <!-- Start of Advanced Ranger Training -->
+               <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="advancedRangerTraining" class="anchor text-center">Advanced Ranger Training</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Tilis Oakwoven
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/Darkwoods/Advanced_Ranged_Training_Night_Elf_Archer_Cuirass.png" alt="Night Elf Archer Cuirass" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/Advanced_Ranged_Training_Night_Elf_Archer_Cuirass_Stats.png' alt='Night Elf Archer Cuirass Stats'>">
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/Darkwoods/Advanced_Ranger_Training_Tilis_Oakwoven.png" alt="Tilis Oakwoven">
+                        Speak to <span class="light-red">Tilis Oakwoven</span> Greetings, traveler. Many come to learn from us elves the secrets of ranged weapons; Are you here to train your eyes and your mind? <span class="light-green">Yes. What do you require of me?</span> I am a great teacher, indeed, but I will recommend you train with my colleagues. Go forth and search for 6 Elven Ranged Trainers.
+                        They are located across the land of Darkwood. Visit Whisperdale, Autumn, Darkwood, and Lord Vezryl's Estate. Return to me once you have completed their training. Perhaps you should start with Silvi Thrushwood. He resides here in fair Whisperdale.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Short Bow</strong> in Whisperdale <span class="light-red">Sivi Thrushwood</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Long Bow</strong> in Vezryl's Estate <span class="light-red">Ox Juurnuhk</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Small Crossbow</strong> in Autumn <span class="light-red">Ulver Muurnahknahk</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Large Crossbow</strong> in Whisperdale <span class="light-red">Tvistia Llywenen</span></li>                          
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Vine Sling</strong> in Autumn <span class="light-red">Umduhk Dumdumuhk</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Vine Staff Sling</strong> in Vezryl's Estate <span class="light-red">Gar-Gar Mootarhk</span></li>
+                        </ul>
+                        <hr>                                            
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Advanced Ranger Training</span><span class="orange">, Tilis Oakwoven of Whisperdale sent you to search Astari lands for 6 Elven Ranged Trainers.</span>
+                        <br>
+                       Return to <span class="light-red">Tilis Oakwoven</span> You have learned all the ranged combat skills from the trainers! This armor shall now fit you. Stalk the darkwoods, weave among the oaks. There is strength in staying. Stay strong and aid the night elves. <span class="orange">*He salutes you*</span> 
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Night Elf Archer Cuirass</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">33,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        ???  
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>    
+                  </div>
+                </div>
+              </div>
+              <!-- End of Advanced Ranger Training! -->
+              <div class="line"></div>
+              <!-- Start of Steady Hand -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="steadyHand" class="anchor text-center">Steady Hand</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat 12 Bows
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Sivi Thrushwood
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/Darkwoods/Slow_And_Steady_Night_Elf_Archer_Cape.png" alt="Night Elf Archer Cape" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/Slow_And_Steady_Night_Elf_Archer_Cape_Stats.png' alt='Night Elf Archer Cape Stats'>">
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/Darkwoods/Steady_Hand_Silvi_Thrushwood.png" alt="Silvi Thrushwood">
+                        Speak to <span class="light-red">Silvi Thrushwood</span> I see that Tilis has recommended you for Archery training. <span class="orange">*He clears his throat*</span> The best thing to remember when practicing Archery is a steady shot. To achieve this, you must still your nerves. It requires complete mastery of yourself.
+                        I can see you are a bit...jumpy. Perhaps a good battle will help you focus. First, let's outfit you with a new bow. Hunt 50 Dragoons with this Oakwoven Short Bow. 
+                        <br>                                           
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Steady Hand</span><span class="orange">, Use the Oakwoven Short Bow to slay 50 Dragoons for Silvi Thrushwood of Whisperdale.</span>
+                        <br>
+                    </p>
+                    <p class="clearfix">   
+                      <img class="npc-img" src="Images/NPC/Monsters/Dragoon.png" alt="Dragoon"> 
+                        Head out the east side of Whisperdale following the road north untill you reach Lord Vezryl Estate. From there head west towards the coast once there go south to find a bridge that leads to the Dragoon Island. Kill 50 <span class="red">Dragoons</span>. You will be updated as you kill them <span class="green">QUEST UPDATE: You have killed 50 Dragoons!</span>
+                        When you have killed all 50 you will be updated to return to Silvi Thrushwood.
+                        <br>                                           
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Steady Hand</span><span class="orange">, Return to Silvi Thrushwood in Whisperdale to collect your reward!.</span>
+                        <br>
+                        Return to <span class="light-red">Sivi Thrushwood</span>, you have killed all the Dragoons with the Oakwoven Short Bow? I am honored to be your acquaintance. Were this belt proudly, as befits your accomplishment. 
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Night Elf Archer Belt</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">27,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        You have completed Silvi Thrushwood's Short Bow Training!
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>    
+                  </div>
+                </div>
+              </div>
+              <!-- End of Advanced Ranger Training! -->
               <div class="line"></div>
 
 
